[package]
name = "shell-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "now"
path = "src/bin/now.rs"

[[bin]]
name = "kuso"
path = "src/bin/kuso.rs"

[[bin]]
name = "work_work"
path = "src/bin/work_work.rs"

[[bin]]
name = "kreme"
path = "src/bin/kreme.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive"] }
regex = "1.11.1"
